# canaille

./: .coveralls.yml  .gitignore  .gitlab-ci.yml  .ignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE.md  LICENSE.rst  MANIFEST.in  Makefile  README.md  TODO.md  build.py  canaille.nix  canaille.spec  config.sample.toml  docker-compose.yml  hatch_build.py  oauth2-openldap.ldif  pyproject.toml  requirements.txt  result  setup.cfg  test.py
.github/workflows/: ci.yml  docker.yml  release.yml  tests.yaml
canaille/: __init__.py  account.py  admin.py  apputils.py  commands.py  config.sample.toml  configuration.py  consents.py  flaskutils.py  forms.py  groups.py  i18n.py  installation.py  ldaputils.py  mails.py  models.py  oauth.py  oauth2utils.py  populate.py  tokens.py  well_known.py
canaille/admin/: __init__.py  authorizations.py  clients.py  mail.py  tokens.py
canaille/app/: __init__.py  commands.py  configuration.py  features.py  fido.py  flask.py  forms.py  i18n.py  installation.py  logging.py  mails.py  mails_sending_conditions.py  models.py  otp.py  security.py  sentry.py  server.py  session.py  sms.py  talisman.py  templating.py  themes.py  toml.py
canaille/backends/: __init__.py  commands.py  models.py
canaille/commands/: clean.py  client.py
canaille/conf/: config.sample.toml  oauth-authorization-server.sample.json  openid-configuration.sample.json
canaille/core/: account.py  admin.py  auth.py  blueprints.py  captcha.py  commands.py  configuration.py  forms.py  groups.py  mails.py  models.py  populate.py  sms.py  utils.py  validators.py
canaille/hypercorn/: __init__.py  app.py  commands.py  configuration.py
canaille/ldap_backend/: backend.py  installation.py  ldapobject.py  utils.py
canaille/oidc/: authorizations.py  basemodels.py  blueprints.py  clients.py  commands.py  configuration.py  consents.py  cors.py  endpoints.py  forms.py  installation.py  jose.py  jwk.py  metadata.py  models.py  oauth.py  oauth2utils.py  provider.py  tokens.py  userinfo.py  utils.py  well_known.py
canaille/scim/: casting.py  client.py  configuration.py  endpoints.py  models.py
canaille/templates/: about.html  authorize.html  base.html  consent_list.html  error.html  firstlogin.html  flask.j2  fomanticui.html  fomanticui.j2  forgotten-password.html  group.html  groups.html  home.html  invite.html  login.html  onboarding.html  password.html  profile.html  profile_add.html  profile_edit.html  profile_settings.html  reset-password.html  token_list.html  userlist.html  users.html
canaille/translations/: README.md  README.rst  babel.cfg  messages.pot
canaille/utils/: __init__.py  flask.py  forms.py  i18n.py  mails.py
conf/: config.sample.toml  oauth-authorization-server  openid-configuration.sample.json
demo/: .gitignore  Dockerfile-canaille  Dockerfile-client  Dockerfile-ldap  Dockerfile-maildump  Procfile  Procfile-ldap  Procfile-memory  Procfile-sql  README.md  demoapp.py  docker-compose-ldap.yml  docker-compose-memory.yml  docker-compose-sql.yml  docker-compose.yml  ldap-server.py  run.sh  slapd.sh
demo/client/: __init__.py
demo/conf/: canaille-ldap.toml  canaille-memory.toml  canaille-sql.toml  canaille.toml  client1.cfg  client2.cfg  oauth-authorization-server.json  openid-configuration.json
demo/conf-docker/: canaille-ldap.toml  canaille-memory.toml  canaille-sql.toml  canaille.toml  client1.cfg  client2.cfg  oauth-authorization-server.json  openid-configuration.json
demo/ldif/: bootstrap-data.ldif  bootstrap-oidc.ldif  bootstrap-tree.ldif  bootstrap-users-tree.ldif  bootstrap-users.ldif  bootstrap.ldif  memberof-config.ldif  memberof.ldif  otp-config.ldif  ppolicy-config.ldif  ppolicy.ldif  refint-config.ldif
dev/: .gitignore  Dockerfile  Dockerfile-canaille  Dockerfile-ldap  Dockerfile-maildump  Procfile-ldap  Procfile-memory  Procfile-sql  README.md  bootstrap.ldif  devapp.py  docker-compose-ldap.yml  docker-compose-memory.yml  docker-compose-sql.yml  docker-compose.yml  ldap-server.py  run.py
dev/client/: __init__.py
dev/conf/: canaille-ldap.toml  canaille-memory.toml  canaille-sql.toml  canaille.toml
dev/ldif/: bootstrap-oidc-tree.ldif  oauth2-openldap.ldif
doc/: .gitignore  backends.rst  changelog.rst  commands.py  commands.rst  comparison.rst  conf.py  configuration.rst  databases.rst  deployment.rst  doc_app.py  features.rst  index.rst  install.rst  reference.rst  requirements.txt  specifications.rst  troubleshooting.rst  usecases.rst
doc/development/: changelog.rst  comparison.rst  index.rst  specifications.rst
doc/gettext/: .gitignore  development.pot  features.pot  index.pot  locales.pot  references.pot  tutorial.pot
doc/howtos/: databases.rst  (+8 more)
docker/: Dockerfile  bootstrap.ldif
integration/: conftest.py  test_login.py  test_pages.py  utils.py
oidc_ldap_bridge/: __init__.py  account.py  consents.py  flaskutils.py  forms.py  ldaputils.py  models.py  oauth.py  oauth2utils.py  routes.py  tokens.py
schemas/: oauth2-openldap.ldif  oauth2-openldap.schema
tests/: broker.py  conftest.py  oauth-authorization-server.json  openid-configuration.json  test_about.py  test_account.py  test_apputils.py  test_authorization_code_flow.py  test_bad_flows.py  test_client_admin.py  test_code_admin.py  test_command_clean.py  test_command_client.py  test_configuration.py  test_consent.py  test_errors.py  test_flaskutils.py  test_forgotten_password.py  test_groups.py  test_hybrid_flow.py  test_i18n.py  test_implicit_flow.py  test_invitation.py  test_ldap_utils.py  test_mail_admin.py  test_mails.py  test_oauth2utils.py  test_password_flow.py  test_password_reset.py  test_profile.py  test_profile_creation.py  test_profile_edition.py  test_profile_photo.py  test_profile_settings.py  test_token.py  test_token_admin.py  test_token_introspection.py  test_token_revocation.py
web/: __init__.py  app.py  authorizations.py  clients.py  flaskutils.py  forms.py  ldaputils.py  models.py  oauth.py  oauth2utils.py  routes.py  tokens.py
website/: app.py  models.py  oauth2.py  routes.py
(+593 files in other folders)
